stopped column overflow and fixed diagonal check logic

--- a/style.css
+++ b/style.css
@@ -161,3 +161,6 @@ body {
     /*width:100%;*/
     /*height:100%;*/
 /*}*/
+.disableClicks{
+    pointer-events: none;
+}
